# crocoddyl-cmake-example-project

./: CMakeLists.txt  README.md  main.cpp
